--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "babel-cli": "6",
+    "babel-preset-react-app": "3",
     "jsx": "^0.9.89",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
